<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.CartFragment">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight ="100">

        <ScrollView
            android:id="@+id/cartsView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/cartContainer"
                    android:layout_margin="@dimen/fifteendp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="@dimen/tendp"
            app:layout_constraintTop_toBottomOf="@id/cartsView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/orderDetails"
                style="@style/title"
                android:textColor="@color/priceColor"
                android:text="@string/orderDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_margin="@dimen/fivedp"
                android:id="@+id/priceDetails"
                app:layout_constraintTop_toBottomOf="@id/orderDetails"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/priceLabel"
                    style="@style/othertext"
                    android:text="@string/totalCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/othertext"
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/fivedp"
                android:id="@+id/taxDetails"
                app:layout_constraintTop_toBottomOf="@id/priceDetails"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/taxLabel"
                    style="@style/othertext"
                    android:text="@string/tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tax"
                    style="@style/othertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/fivedp"
                android:id="@+id/totalDetails"
                app:layout_constraintTop_toBottomOf="@id/taxDetails"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/totalLabel"
                    style="@style/othertext"
                    android:text="@string/totalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/othertext"
                    android:id="@+id/totalPriceWithTax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:layout_marginTop="@dimen/fivedp"
                android:layout_marginBottom="@dimen/fivedp"
                app:layout_constraintTop_toBottomOf="@id/totalDetails"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/checkout"
                android:text="@string/checkout"
                style="@style/button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:text="@string/emptyCart"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:progressDrawable="@drawable/progress_bar"
        android:id="@+id/loadingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>