<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SneakerDetailsFragment">

    <ImageView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/img123"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/name"
            style="@style/title"
            android:layout_margin="@dimen/fifteendp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_margin="@dimen/fifteendp"
            android:id="@+id/brandDetails"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    style="@style/othertext"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/brandLabel"
                    android:textStyle="bold"
                    android:text="@string/brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/othertext"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        <LinearLayout
            android:layout_margin="@dimen/fifteendp"
            android:id="@+id/yearDetails"
            app:layout_constraintTop_toBottomOf="@id/brandDetails"
            app:layout_constraintLeft_toLeftOf="parent"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/othertext"
                    android:textStyle="bold"
                    android:id="@+id/yearOfReleaseLabel"
                    android:text="@string/yearOfReleaseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/othertext"
                    android:id="@+id/yearOfRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        <LinearLayout
            android:layout_margin="@dimen/fifteendp"
            android:id="@+id/prizeDetails"
            app:layout_constraintTop_toBottomOf="@id/yearDetails"
            app:layout_constraintLeft_toLeftOf="parent"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/othertext"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/priceLabel"
                    android:textStyle="bold"
                    android:text="@string/priceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/price"
                    style="@style/othertext"
                    android:textColor="@color/priceColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        <Button
            app:layout_constraintTop_toBottomOf="@id/prizeDetails"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/addToCartBtn"
            android:text="@string/cartBtn"
            style="@style/button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>